--- a/proyectos/proyecto1/Jenkinsfile
+++ b/proyectos/proyecto1/Jenkinsfile
@@ -1,84 +1,89 @@
-// Sintaxis declarativa: MAS SENCILLA y LA MAS USADA. Menos potente que la de scripting... 
-//          pero mucho MAS que los proyectos de estilo libre
-// Sintaxis de scripting: MAS COMPLEJA Y MAS POTENTE: Puedo hacer lo que quiera con Jenkins
-
 pipeline {
     
-    agent any // Para definir DONDE QUIERO QUE SE EJECUTE ESTA TAREA
-    //Parametros
-    //Triggers
-    stages {
-       stage("Etapa 1") {
-           steps { // Hacemos las llamadas a los plugins
-               sh "echo Soy la etapa 1" // Llamada al plugin que ejecuta una shell
-               sh "echo Sigo" // Llamada al plugin que ejecuta una shell
-               sh "echo Sigo" // Llamada al plugin que ejecuta una shell
-               sh "echo Sigo" // Llamada al plugin que ejecuta una shell
-               sh "echo Salgo de la etapa 1" // Llamada al plugin que ejecuta una shell
-           }
-           post {
-               always { // Post tareas que siempre deben de ejecutarse
-                  sh "echo Acabó la etapa 1"
-               }
-               success { // Postareas que SOLO se ejecutan si los pasos (STEPS) han ido bien
-                  sh "echo Y acabó bien"
-               }
-               failure { // Postareas que SOLO se ejecutan si los pasos (STEPS) han dado error
-                  sh "echo Pero acabó mal"
-               }
-           }
-       }
-       stage("Etapa 2") {
-           
-           parallel {
-               stage("Etapa 2.1 Pruebas Chrome") {
-                   //when {}
-                   steps {
-                       sh "sleep 10"
-                       sh "echo Soy la etapa 2.1"
-                   }
-                   post {
-                       success { // Post tareas que siempre deben de ejecutarse
-                          sh "echo Acabó la etapa 2.1 bien!"
-                       }
-                   }
-               }
-               stage("Etapa 2.2 Pruebas Safari") {
-                   steps {
-                       sh "sleep 10"
-                       sh "echo Soy la etapa 2.2"
-                   }
-                   post {
-                       failure { // Post tareas que siempre deben de ejecutarse
-                          sh "echo Acabó la etapa 2.2 con error"
-                       }
-                   }
-               }
-           }
-           
-           post {
-               always { // Post tareas que siempre deben de ejecutarse
-                  sh "echo Acabó la etapa 2"
-               }
-               success { // Postareas que SOLO se ejecutan si los pasos (STEPS) han ido bien
-                  sh "echo Y acabó bien"
-               }
-               failure { // Postareas que SOLO se ejecutan si los pasos (STEPS) han dado error
-                  sh "echo Pero acabó mal"
-               }
-           }
-       }
+    // agent any
+    agent {
+        docker {
+            image "maven:3.8.4-jdk-11"
+        }
     }
-
+    
+    //environment {
+    //    rutaSonarScanner= tool "misonarscanner"
+    //}
+    stages {
+        stage("Compilación") {
+            steps {
+                sh "mvn compile"
+            }
+        }
+        stage("Pruebas") {
+            stages {
+                stage("Pruebas Dinámicas") {
+                    /* Solucion con MAGIA... evitar                    
+                    steps {
+                        // Compilar pruebas -> Las pruebas no pueden ejecutarse
+                        // Ejecutar pruebas -> Genera informe... tanto si se ejecutan bien como si se ejecutan mal
+                    }
+                    post {
+                        always {
+                            junit allowEmptyResults: true, testResults: 'target/surefire-reports/*.xml' 
+                        }    
+                    }
+                    */                    
+                    stages {
+                        stage("Compilación pruebas") {
+                            steps {
+                                // Compilar pruebas -> Las pruebas no pueden ejecutarse
+                                sh "mvn test-compile"
+                            }
+                        }
+                        stage("Ejecución pruebas") {
+                            steps {
+                                // Ejecutar pruebas -> Genera informe... tanto si se ejecutan bien como si se ejecutan mal
+                                sh "mvn test"
+                            }
+                            post{
+                                always {
+                                    junit testResults: 'target/surefire-reports/*.xml' 
+                                }    
+                            }
+                        }
+                    }
+                }
+                stage("SonarQube") {
+                    steps {
+                        withSonarQubeEnv('sonarqube'){
+                            //sh "$rutaSonarScanner/bin/sonar-scanner"
+                            
+                            sh """
+                            mvn sonar:sonar \
+                                -Dsonar.projectKey=proyectoMaven \
+                                -Dsonar.host.url=http://172.31.7.239:8081 \
+                                -Dsonar.login=6b674b3412bf8d985f3d3c0536c8ae05fa256efe
+                            """
+                            
+                        }
+                        timeout(time: 10, unit: 'MINUTES'){
+                            waitForQualityGate abortPipeline: true
+                        }
+                    }
+                }
+            }
+        }
+        stage("Empaquetado") {
+            steps {
+                sh "mvn package -Dmaven.test.skip=true"
+            }
+            post{
+                success {
+                    archiveArtifacts artifacts: 'target/*.jar', followSymlinks: false
+                }
+            }
+        }
+    }
     post {
-       always { // Post tareas que siempre deben de ejecutarse
-          sh "echo Acabó la etapa 2"
-       }
-       success { // Postareas que SOLO se ejecutan si los pasos (STEPS) han ido bien
-          sh "echo Y acabó bien"
-       }
-       failure { // Postareas que SOLO se ejecutan si los pasos (STEPS) han dado error
-          sh "echo Pero acabó mal"
-       }
+        always {
+            cleanWs deleteDirs: true, patterns: [[pattern: 'target', type: 'INCLUDE']]
+        }
     }
 }
